Add new id selector

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span>CALCULATOR</span>
           </span>
         </h1>
-        <div class="calculator">
+        <div class="calculator" id="calculatorid">
           <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
           <span class="fontawesome-i">
             <i class="fa-solid fa-signal"></i>
