Add span for title animation

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
       <div class="container-fluid calculator-container">
         <h1 id="calculator-top-title">
           <span id="calculator-title-span">
-            NEW GENERATION <br />
-            <span>CALCULATOR</span>
+            <span id="word1">N</span><span id="word2">E</span><span id="word3">W</span> <span id="word4">G</span><span id="word5">E</span><span id="word6">N</span><span id="word7">E</span><span id="word8">R</span><span id="word9">A</span><span id="word10">T</span><span id="word11">I</span><span id="word12">O</span><span id="word13">N</span> 
+            <!-- NEW GENERATION --> <br />
+            <span id="calculator-text">CALCULATOR</span>
           </span>
         </h1>
         <div class="calculator" id="calculatorid">
